--- a/.github/workflows/pypi_crawler.yml
+++ b/.github/workflows/pypi_crawler.yml
@@ -3,7 +3,7 @@ name: PyPI Package Crawler
 on:
   # 定时运行：每天UTC时间12:00（北京时间20:00）
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '0 * * * *'
   
   # 手动触发
   workflow_dispatch:
