--- a/.github/workflows/pypi_crawler.yml
+++ b/.github/workflows/pypi_crawler.yml
@@ -2,7 +2,7 @@ name: PyPI Package Crawler
 on:
   # 定时运行：每小时运行一次
   schedule:
-    - cron: '0 * * * *'
+    - cron: '*/15 * * * *'
   
   # 手动触发
   workflow_dispatch:
